Ajout Commande tp AvantPoste

--- a/PluginTitle/plugin.yml
+++ b/PluginTitle/plugin.yml
@@ -25,3 +25,5 @@ commands:
   monnaie:
     description: Give la monnaie choisie
     permission: monnaie.use
+  avantposte:
+    description: Teleporter un joueur a l avantposte
