Ajout commande Soute

--- a/PluginTitle/plugin.yml
+++ b/PluginTitle/plugin.yml
@@ -30,3 +30,6 @@ commands:
   vague:
     description: Spawn vague de pillagers
     permission: vague.use
+  soute:
+    description: Teleportation pour les donateurs
+    permission: donateur.use
