Ajout commande box + timer position joueurs

--- a/PluginTitle/plugin.yml
+++ b/PluginTitle/plugin.yml
@@ -37,3 +37,5 @@ commands:
     description: Afficher message mort
   de:
     description: Lancer les des
+  box:
+    description: Teleportation vers box
