--- a/PluginTitle/plugin.yml
+++ b/PluginTitle/plugin.yml
@@ -39,3 +39,5 @@ commands:
     description: Lancer les des
   box:
     description: Teleportation vers box
+  temple:
+    description: Teleportation vers le temple
